--- a/web/app/components/hero/horizontal_event_component.html.erb
+++ b/web/app/components/hero/horizontal_event_component.html.erb
@@ -3,7 +3,7 @@
 
 	</div>
 	<div data-hero--horizontal-event-target="currentItem"
-			 class="flex justify-between transition-opacity select-none tap-highlight-none">
+			 class="flex justify-between transition-opacity select-none ">
 		<div class="<%= helpers.class_names('pr-6 flex-1', {}) %>">
 			<%= content_tag :a,
 											dom_id(@event, 'hero--horizontal-event__link'),
