--- a/web/app/components/left_sidebar/calendar_component.html.erb
+++ b/web/app/components/left_sidebar/calendar_component.html.erb
@@ -1,5 +1,5 @@
 <%= content_tag :div, id: 'calendar', data: { controller: 'left-sidebar--calendar', title: @title }, class: 'transition-opacity', style: 'will-change: min-height;' do %>
-	<div id="calendar--inner" data-calendar-target="calendar" class="calendar select-none tap-highlight-none mt-12" style="will-change: position, transform;">
+	<div id="calendar--inner" data-calendar-target="calendar" class="calendar select-none  mt-12" style="will-change: position, transform;">
 		<%= tag.h2 @title, class: 'c-h2 pb-2' if @title %>
 		<div class="">
 			<div class="capitalize flex font-medium items-center justify-between mt-5 pb-3 rounded-t-lg text-gray-500">
