--- a/web/app/components/main_sidebar/large_event_component.html.erb
+++ b/web/app/components/main_sidebar/large_event_component.html.erb
@@ -75,7 +75,7 @@
 															data:  {
 																reflex: 'click->Event#open'
 															},
-															class: 'p-2 cursor-pointer duration-100 ease-linear flex font-medium group hover:px-3 hover:scale-105 hover:text-gray-600 items-center justify-center mdc-ripple-upgraded--unbounded rounded-full select-none tap-highlight-none text-gray-600 text-sm transform transition-transform' do %>
+															class: 'p-2 cursor-pointer duration-100 ease-linear flex font-medium group hover:px-3 hover:scale-105 hover:text-gray-600 items-center justify-center mdc-ripple-upgraded--unbounded rounded-full select-none  text-gray-600 text-sm transform transition-transform' do %>
 								<svg class="<%= helpers.class_names 'fill-current h-5 hover:scale-150 w-5',
 																										{ 'text-gray-600':  !@user&.like?(@event),
 																											'text-brand-500': @user&.like?(@event) } %>" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -88,7 +88,7 @@
 															data:  {
 																reflex: 'click->Event#open'
 															},
-															class: 'p-2 cursor-pointer duration-100 ease-linear flex font-medium group hover:px-3 hover:scale-105 hover:text-gray-600 items-center justify-center mdc-ripple-upgraded--unbounded rounded-full select-none tap-highlight-none text-gray-600 text-sm transform transition-transform' do %>
+															class: 'p-2 cursor-pointer duration-100 ease-linear flex font-medium group hover:px-3 hover:scale-105 hover:text-gray-600 items-center justify-center mdc-ripple-upgraded--unbounded rounded-full select-none  text-gray-600 text-sm transform transition-transform' do %>
 								<svg class="<%= helpers.class_names 'fill-current h-5 hover:scale-150 w-5',
 																										{ 'text-gray-600': !@user&.dislike?(@event),
 																											'text-red-500':  @user&.dislike?(@event) } %>" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
