--- a/web/app/views/components/events/_saves.html.erb
+++ b/web/app/views/components/events/_saves.html.erb
@@ -65,7 +65,7 @@
 											 size:            :small,
 											 html: {
 													 container: {
-															 css: 'flex-none group h-full relative rounded-lg shadow tap-highlight-none w-40'
+															 css: 'flex-none group h-full relative rounded-lg shadow  w-40'
 													 },
 													 taste_remove: {
 															 visible: false
