--- a/web/app/views/events/show.html.erb
+++ b/web/app/views/events/show.html.erb
@@ -202,7 +202,7 @@
 		<% end %>
 	</div>
 
-	<div class="flex fixed bottom-0 py-3 px-3 space-x-2 w-screen text-sm font-medium text-gray-500 bg-white border-t cursor-pointer select-none md:hidden tap-highlight-none">
+	<div class="flex fixed bottom-0 py-3 px-3 space-x-2 w-screen text-sm font-medium text-gray-500 bg-white border-t cursor-pointer select-none md:hidden ">
 		<a href="<%= @event.source_url %>" target="_blank" rel="nofollow noreferrer" class="flex-1 justify-center space-x-2 select-none c-chip">
 			<div>Site oficial</div>
 			<svg class="h-5 stroke-current" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -223,7 +223,7 @@
 		</div>
 	</div>
 
-	<!--	<div data-controller="install" data-install-native="true" data-install-target="button" class="flex fixed bottom-20 z-30 items-center w-full transition-transform transform translate-y-32 select-none tap-highlight-none">-->
+	<!--	<div data-controller="install" data-install-native="true" data-install-target="button" class="flex fixed bottom-20 z-30 items-center w-full transition-transform transform translate-y-32 select-none ">-->
 	<!--		<span data-action="click->install#install" class="py-3 px-5 mx-auto font-bold text-white bg-white rounded-full shadow-lg bg-brand-500 w-content">-->
 	<!--			Instalar aplicativo-->
 	<!--		</span>-->
