--- a/web/app/views/users/registrations/new.html.erb
+++ b/web/app/views/users/registrations/new.html.erb
@@ -1,5 +1,5 @@
 <section class="bg-white grid grid-cols-1 is-animated max-w-screen-lg md:grid-cols-2 md:items-center md:py-12 mx-auto">
-	<div class="px-5 md:mx-auto tap-highlight-none">
+	<div class="px-5 md:mx-auto ">
 		<div class="antialiased inline-block md:mx-0 md:rounded-lg md:w-full p-5 text-gray-800 text-sm w-screen">
 			Já tem uma
 			conta? <%= link_to 'Faça login', new_user_session_path, class: "cursor-pointer font-bold inline-block ml-1 px-2 py-1 rounded-full text-brand-600" %>
@@ -83,7 +83,7 @@
 			</div>
 		<% end %>
 	</div>
-	<div class="px-5 md:mx-auto tap-highlight-none">
+	<div class="px-5 md:mx-auto ">
 		<%= image_pack_tag ["hero/bebendo.png", "hero/passeando.png", "hero/dancando.png", "hero/skate.png"].sample,
 											 class: 'mb-10 h-32 md:h-auto md:w-52 my-auto w-32 mx-auto' %>
 		<div class="space-y-1 leading-loose text-gray-800">
