--- a/web/app/components/calendar/horizontal_event_component.html.erb
+++ b/web/app/components/calendar/horizontal_event_component.html.erb
@@ -1,5 +1,5 @@
 <%= content_tag :div, id: dom_id(@likeable), data: { controller: 'calendar--horizontal-event', 'calendar--horizontal-event-open-in-sidebar': @open_in_sidebar }, class: 'relative last:z-10' do %>
-	<div class="flex justify-between py-3 px-3 mx-2 mt-2 bg-white rounded-lg border-gray-100 select-none tap-highlight-none md:border md:mx-0 md:px-5">
+	<div class="flex justify-between py-3 px-3 mx-2 mt-2 bg-white rounded-lg border-gray-100 select-none  md:border md:mx-0 md:px-5">
 		<div class="pr-6">
 			<% if @likeable.class == Event %>
 				<%= content_tag :a,
@@ -39,7 +39,7 @@
 													'likeable-id':   @likeable.id,
 													'likeable-type': @likeable.class.table_name.singularize
 												},
-												class: helpers.class_names('mr-2 cursor-pointer duration-100 ease-linear flex font-medium group hover:px-3 hover:text-gray-600 items-center justify-center rounded-full select-none tap-highlight-none text-sm transform transition-transform',
+												class: helpers.class_names('mr-2 cursor-pointer duration-100 ease-linear flex font-medium group hover:px-3 hover:text-gray-600 items-center justify-center rounded-full select-none  text-sm transform transition-transform',
 																									 { 'bg-brand-100 px-2 py-1 -mt-1': @user&.like?(@likeable) }) do %>
 					<svg class="<%= helpers.class_names 'group h-5 w-5 stroke-current',
 																							{ 'text-gray-500':               !@user&.like?(@likeable),
