--- a/web/app/components/calendar_component.html.erb
+++ b/web/app/components/calendar_component.html.erb
@@ -1,6 +1,6 @@
 <%= content_tag :div, id: 'calendar', data: { controller: 'calendar' }, class: 'h-full select-none' do %>
 	<div class="h-full px-1">
-		<div data-calendar-target="calendar" class="calendar bg-white mb-5 mb:bg-transparent md:mb-2 md:mx-0 md:py-3 md:rounded-lg md:shadow-none md:text-center py-2 rounded-lg select-none tap-highlight-none text-center">
+		<div data-calendar-target="calendar" class="calendar bg-white mb-5 mb:bg-transparent md:mb-2 md:mx-0 md:py-3 md:rounded-lg md:shadow-none md:text-center py-2 rounded-lg select-none  text-center">
 			<div class="capitalize flex font-medium items-center justify-between pb-5 rounded-t-lg text-gray-500">
 				<div class="flex items-center">
 				<span class="c-h2 px-5 mt-5">
