--- a/web/app/components/left_sidebar/horizontal_event_component.html.erb
+++ b/web/app/components/left_sidebar/horizontal_event_component.html.erb
@@ -1,5 +1,5 @@
 <%= content_tag :div, id: dom_id(@likeable, :left_sidebar), class: 'pl-14', data: { controller: 'left-sidebar--horizontal-event', 'flip-key': dom_id(@likeable, :left_sidebar) } do %>
-	<div class="flex flex-col relative select-none group tap-highlight-none">
+	<div class="flex flex-col relative select-none group ">
 		<%= link_to (@likeable.class == Event ? event_path(@likeable) : movie_path(@likeable.movie)),
 								title: @likeable.name,
 								class: 'hover:text-brand-600 text-sm text-gray-800 leading-relaxed',
