--- a/web/app/components/likes_button_component.html.erb
+++ b/web/app/components/likes_button_component.html.erb
@@ -6,7 +6,7 @@
 									'likeable-type': @likeable.class.table_name.singularize
 								} do %>
 	<% if @template == 'button' %>
-		<div class="<%= helpers.class_names('mr-1 cursor-pointer duration-100 ease-linear flex font-medium group hover:bg-brand-100 px-2 py-1 items-center justify-center rounded-full select-none tap-highlight-none text-sm transform transition-transform',
+		<div class="<%= helpers.class_names('mr-1 cursor-pointer duration-100 ease-linear flex font-medium group hover:bg-brand-100 px-2 py-1 items-center justify-center rounded-full select-none  text-sm transform transition-transform',
 																				{ 'bg-brand-100 px-2 py-1': @user&.like?(@likeable) }) %>">
 			<svg class="<%= helpers.class_names 'h-4 stroke-current group-hover:text-brand-600',
 																					{ 'text-gray-500':               !@user&.like?(@likeable),
