--- a/web/app/javascript/stylesheets/_components.scss
+++ b/web/app/javascript/stylesheets/_components.scss
@@ -28,14 +28,14 @@
   }
 
   .c-chip {
-    @apply border inline-block flex justify-start items-center py-2 px-4 text-sm font-medium text-gray-700 bg-white rounded-full transition-all transition-colors duration-100 transform cursor-pointer select-none md:text-base font-display md:hover:bg-brand-100 md:hover:border-brand-100 md:hover:text-gray-700 tap-highlight-none w-content;
+    @apply border inline-block flex justify-start items-center py-2 px-4 text-sm font-medium text-gray-700 bg-white rounded-full transition-all transition-colors duration-100 transform cursor-pointer select-none md:text-base font-display md:hover:bg-brand-100 md:hover:border-brand-100 md:hover:text-gray-700  w-content;
 
     &--active {
-      @apply inline-block border border-brand-600  flex justify-start items-center py-2 px-4 text-sm font-medium rounded-full transition-all transition-colors duration-100 transform cursor-pointer select-none md:text-base bg-brand-600 font-display md:hover:bg-brand-700 md:hover:border-brand-700 md:hover:text-white tap-highlight-none text-white w-content;
+      @apply inline-block border border-brand-600  flex justify-start items-center py-2 px-4 text-sm font-medium rounded-full transition-all transition-colors duration-100 transform cursor-pointer select-none md:text-base bg-brand-600 font-display md:hover:bg-brand-700 md:hover:border-brand-700 md:hover:text-white  text-white w-content;
     }
 
     &--highlight {
-      @apply border inline-block flex justify-start items-center py-2 px-4 text-sm font-medium rounded-full transition-all transition-colors duration-100 transform cursor-pointer select-none md:text-base bg-white font-display border-brand-600 md:hover:bg-brand-600 md:hover:border-brand-600 md:hover:text-white tap-highlight-none text-brand-600 w-content;
+      @apply border inline-block flex justify-start items-center py-2 px-4 text-sm font-medium rounded-full transition-all transition-colors duration-100 transform cursor-pointer select-none md:text-base bg-white font-display border-brand-600 md:hover:bg-brand-600 md:hover:border-brand-600 md:hover:text-white  text-brand-600 w-content;
     }
   }
 
