--- a/web/app/views/components/_taste_button.html.erb
+++ b/web/app/views/components/_taste_button.html.erb
@@ -17,7 +17,7 @@
 
 <% if user %>
 	<% if taste_sentiment.to_sym == :positive %>
-		<div class="<%= class_names html.dig(:container, :css) || 'p-2 cursor-pointer duration-100 ease-linear flex font-medium group hover:px-3 hover:scale-105 hover:text-gray-600 items-center justify-center mdc-ripple-upgraded--unbounded rounded-full select-none tap-highlight-none text-gray-600 text-sm transform transition-transform',
+		<div class="<%= class_names html.dig(:container, :css) || 'p-2 cursor-pointer duration-100 ease-linear flex font-medium group hover:px-3 hover:scale-105 hover:text-gray-600 items-center justify-center mdc-ripple-upgraded--unbounded rounded-full select-none  text-gray-600 text-sm transform transition-transform',
 																{'bg-brand-100': user.like?(resource)} %>"
 				 data-action="click->cable-ready#perform"
 				 data-controller="cable-ready"
@@ -41,7 +41,7 @@
 			</svg>
 		</div>
 	<% elsif taste_sentiment.to_sym == :negative %>
-		<div class="<%= class_names html.dig(:container, :css) || 'p-2 cursor-pointer duration-100 ease-linear flex font-medium group hover:px-3 hover:scale-105 hover:text-gray-600 items-center justify-center mdc-ripple-upgraded--unbounded rounded-full select-none tap-highlight-none text-gray-600 text-sm transform transition-transform',
+		<div class="<%= class_names html.dig(:container, :css) || 'p-2 cursor-pointer duration-100 ease-linear flex font-medium group hover:px-3 hover:scale-105 hover:text-gray-600 items-center justify-center mdc-ripple-upgraded--unbounded rounded-full select-none  text-gray-600 text-sm transform transition-transform',
 																{'bg-red-100':   user.dislike?(resource)} %>"
 				 data-action="click->cable-ready#perform"
 				 data-controller="cable-ready"
