--- a/web/app/views/components/follow/_follow_button.html.erb
+++ b/web/app/views/components/follow/_follow_button.html.erb
@@ -1,4 +1,4 @@
-<div class="<%= class_names('bg-white cursor-pointer duration-100 h-content hover:scale-110 inline-flex items-center pl-1 pr-2 py-1 rounded-full select-none space-x-1 tap-highlight-none text-gray-600 text-sm transform transition-transform',
+<div class="<%= class_names('bg-white cursor-pointer duration-100 h-content hover:scale-110 inline-flex items-center pl-1 pr-2 py-1 rounded-full select-none space-x-1  text-gray-600 text-sm transform transition-transform',
 														{ 'bg-brand-100 text-brand-500': @user.follow?(@followable),
 															'bg-gray-50 text-gray-600':    !@user.follow?(@followable) }) %>"
 		 data-action="click->Place#follow"
