--- a/web/app/views/feeds/category.html.erb
+++ b/web/app/views/feeds/category.html.erb
@@ -66,7 +66,7 @@
 		</section>
 	<% end %>
 
-	<!--	<div data-controller="install" data-install-native="true" data-install-target="button" class="items-center flex select-none tap-highlight-none bottom-20 fixed transform transition-transform translate-y-32 w-full z-30">-->
+	<!--	<div data-controller="install" data-install-native="true" data-install-target="button" class="items-center flex select-none  bottom-20 fixed transform transition-transform translate-y-32 w-full z-30">-->
 	<!--		<span data-action="click->install#install" class="bg-brand-500 bg-white font-bold mx-auto px-5 py-3 rounded-full shadow-lg text-white w-content">-->
 	<!--			Instalar aplicativo-->
 	<!--		</span>-->
