--- a/web/app/views/feeds/neighborhood.html.erb
+++ b/web/app/views/feeds/neighborhood.html.erb
@@ -32,7 +32,7 @@
 						 data-action="click->toggle-style#toggle"
 						 data-toggle-style-target="toggle"
 						 data-toggle-style-identifier="<%= neighborhood.try(:parameterize_with_accents) %>"
-						 class="<%= class_names 'tap-highlight-none w-content user select-none antialiased bg-gray-50 border md:mb-3 mr-2 md:mr-3 px-4 py-1 rounded-full cursor-pointer transform transition-colors duration-200',
+						 class="<%= class_names ' w-content user select-none antialiased bg-gray-50 border md:mb-3 mr-2 md:mr-3 px-4 py-1 rounded-full cursor-pointer transform transition-colors duration-200',
 																		{ 'bg-brand-200 text-brand-800 border-brand-400': params[:neighborhood]&.include?(neighborhood.try(:parameterize_with_accents)),
 																			'text-gray-800':                                !params[:neighborhood]&.include?(neighborhood.try(:parameterize_with_accents)) } %>">
 						<%= neighborhood %>
