--- a/web/app/views/friendships/_friendship_button.html.erb
+++ b/web/app/views/friendships/_friendship_button.html.erb
@@ -1,7 +1,7 @@
 <div id="<%= dom_id friend, :friendship_button %>"
 		 data-controller="friendship">
 	<% if !user.friendship? friend %>
-		<div class="flex items-center w-content justify-center px-2 py-1 text-sm font-medium text-gray-600 border border-gray-100 rounded cursor-pointer select-none tap-highlight-none"
+		<div class="flex items-center w-content justify-center px-2 py-1 text-sm font-medium text-gray-600 border border-gray-100 rounded cursor-pointer select-none "
 				 data-reflex="click->Friendship#friendship"
 				 data-reflex-root="#page"
 				 data-friend-id="<%= friend.id %>"
@@ -14,7 +14,7 @@
 			<span>Solicitar amizade</span>
 		</div>
 	<% elsif user.friendship_request_received? friend %>
-		<div class="flex items-center w-content justify-center px-2 py-1 text-sm font-medium text-brand-500 bg-white border border-brand-500 rounded cursor-pointer select-none tap-highlight-none"
+		<div class="flex items-center w-content justify-center px-2 py-1 text-sm font-medium text-brand-500 bg-white border border-brand-500 rounded cursor-pointer select-none "
 				 data-reflex="click->Friendship#friendship"
 				 data-reflex-root="#page"
 				 data-friend-id="<%= friend.id %>"
@@ -27,7 +27,7 @@
 			<span>Aceitar amizade</span>
 		</div>
 	<% elsif user.friendship_requested? friend %>
-		<div class="flex items-center w-content justify-center px-2 py-1 text-sm font-medium text-gray-600 border-transparent rounded cursor-pointer select-none bg-gray-50 tap-highlight-none"
+		<div class="flex items-center w-content justify-center px-2 py-1 text-sm font-medium text-gray-600 border-transparent rounded cursor-pointer select-none bg-gray-50 "
 				 data-reflex="click->Friendship#friendship"
 				 data-reflex-root="#page"
 				 data-friend-id="<%= friend.id %>"
@@ -40,7 +40,7 @@
 			<span>Amizade solicitada</span>
 		</div>
 	<% elsif user.friendship_accepted? friend %>
-		<div class="flex items-center w-content justify-center px-2 py-1 text-sm font-medium text-brand-500 bg-brand-100 rounded-full cursor-pointer select-none tap-highlight-none">
+		<div class="flex items-center w-content justify-center px-2 py-1 text-sm font-medium text-brand-500 bg-brand-100 rounded-full cursor-pointer select-none ">
 			<svg class="w-5 mr-1 text-brand-400 fill-current" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
 				<path d="M0 0h24v24H0z" fill="none"/>
 				<path d="M16 11c1.66 0 2.99-1.34 2.99-3S17.66 5 16 5c-1.66 0-3 1.34-3 3s1.34 3 3 3zm-8 0c1.66 0 2.99-1.34 2.99-3S9.66 5 8 5C6.34 5 5 6.34 5 8s1.34 3 3 3zm0 2c-2.33 0-7 1.17-7 3.5V19h14v-2.5c0-2.33-4.67-3.5-7-3.5zm8 0c-.29 0-.62.02-.97.05 1.16.84 1.97 1.97 1.97 3.45V19h6v-2.5c0-2.33-4.67-3.5-7-3.5z"/>
