--- a/web/app/components/hero/horizontal_event_component.html.erb
+++ b/web/app/components/hero/horizontal_event_component.html.erb
@@ -13,18 +13,18 @@
 												'event-id': @event.id
 											},
 											class: 'c-h3 inline leading-snug' do %>
-				<%= @event.name %>
+				<%= helpers.limit_name_size @event.name, 40 %>
 			<% end %>
-			<div class="inline text-xs md:text-sm text-gray-700">
-				<%= helpers.day_of_week(@event.start_time) %>
+			<div class="inline text-sm text-gray-700">
+				<%= helpers.day_of_week(@event.start_time)&.capitalize %>
 				· <%= @event.multiple_hours? ? '+1 horário' : "#{helpers.format_hour(@event.start_time)}h" %> ·
-				<%= @event&.categories_display_name&.capitalize %> ·
+				<span class="text-brand-600"><%= @event&.categories_display_name&.capitalize %> ·</span>
 				<%= link_to helpers.limit_place_name_size(@event.place_name, 24), place_path(@event.place), class: 'md:hover:underline capitalize' %>
 			</div>
 			<div class="font-light hidden md:inline-block mt-2 text-gray-700 text-sm">
 				<%= helpers.limit_description_size @event.description, 120 %>
 			</div>
-			<div class="flex mt-5 space-x-2">
+			<div class="flex mt-5 space-x-4">
 				<%= content_tag :div, data: { action: 'click->hero--horizontal-event#like', 'event-id': @event.id }, class: 'c-chip' do %>
 					<svg class="<%= helpers.class_names 'h-5 w-5 stroke-current',
 																							{ '': !@user&.like?(@event),
