--- a/web/app/views/feeds/_filter.html.erb
+++ b/web/app/views/feeds/_filter.html.erb
@@ -2,12 +2,12 @@
 										id:    'main-sidebar--filter',
 										data:  { controller: 'filter', action: 'turbo:before-fetch-request@document->filter#loading turbo:frame-render@document->filter#loaded' },
 										class: 'inline-block -mx-5 duration-300 md:overflow-x-auto px-5 scrollx transition-all translate-x-32' do %>
-	<div class="flex flex-wrap md:w-auto pt-4 w-content">
+	<div class="flex flex-wrap md:w-auto pt-4 w-content space-x-4">
 		<% if @category.blank? %>
 			<% if @theme.present? %>
 				<%= content_tag :div,
 												data:  { action: 'click->filter#open' },
-												class: 'c-chip--active mb-3 mr-3' do %>
+												class: 'c-chip--active' do %>
 					<svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 mr-1" viewBox="0 0 20 20" fill="currentColor">
 						<path fill-rule="evenodd" d="M5.293 7.293a1 1 0 011.414 0L10 10.586l3.293-3.293a1 1 0 111.414 1.414l-4 4a1 1 0 01-1.414 0l-4-4a1 1 0 010-1.414z" clip-rule="evenodd"/>
 					</svg>
@@ -21,7 +21,7 @@
 				</div>
 			<% else %>
 				<%= link_to feed_filter_path(filter_group: 'theme'),
-										class: 'c-chip mr-3 mb-3' do %>
+										class: 'c-chip ' do %>
 					<svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 mr-1" viewBox="0 0 20 20" fill="currentColor">
 						<path fill-rule="evenodd" d="M5.293 7.293a1 1 0 011.414 0L10 10.586l3.293-3.293a1 1 0 111.414 1.414l-4 4a1 1 0 01-1.414 0l-4-4a1 1 0 010-1.414z" clip-rule="evenodd"/>
 					</svg>
@@ -34,13 +34,13 @@
 			<% if @category.present? %>
 				<%= content_tag :div,
 												data:  { action: 'click->filter#open' },
-												class: 'c-chip--active mb-3 mr-3' do %>
+												class: 'c-chip--active' do %>
 					<svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 mr-1" viewBox="0 0 20 20" fill="currentColor">
 						<path fill-rule="evenodd" d="M5.293 7.293a1 1 0 011.414 0L10 10.586l3.293-3.293a1 1 0 111.414 1.414l-4 4a1 1 0 01-1.414 0l-4-4a1 1 0 010-1.414z" clip-rule="evenodd"/>
 					</svg>
 					<%= @category&.details['display_name'] %>
 				<% end %>
-				<div data-action="click->filter#clear" class="c-chip mb-3 mr-3 group">
+				<div data-action="click->filter#clear" class="c-chip group">
 					Limpar filtro
 					<svg xmlns="http://www.w3.org/2000/svg" class="-mr-1.5 fill-current h-5 group-hover:text-red-400 ml-1.5 w-5" viewBox="0 0 20 20" fill="currentColor">
 						<path fill-rule="evenodd" d="M10 18a8 8 0 100-16 8 8 0 000 16zM8.707 7.293a1 1 0 00-1.414 1.414L8.586 10l-1.293 1.293a1 1 0 101.414 1.414L10 11.414l1.293 1.293a1 1 0 001.414-1.414L11.414 10l1.293-1.293a1 1 0 00-1.414-1.414L10 8.586 8.707 7.293z" clip-rule="evenodd"/>
@@ -48,7 +48,7 @@
 				</div>
 			<% else %>
 				<%= link_to feed_filter_path(filter_group: 'category'),
-										class: 'c-chip mb-3 mr-3' do %>
+										class: 'c-chip' do %>
 					<svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 mr-1" viewBox="0 0 20 20" fill="currentColor">
 						<path fill-rule="evenodd" d="M5.293 7.293a1 1 0 011.414 0L10 10.586l3.293-3.293a1 1 0 111.414 1.414l-4 4a1 1 0 01-1.414 0l-4-4a1 1 0 010-1.414z" clip-rule="evenodd"/>
 					</svg>
