--- a/web/app/views/layouts/_top-app-bar.html.erb
+++ b/web/app/views/layouts/_top-app-bar.html.erb
@@ -32,15 +32,6 @@
 							<path d="M10.5 17L1.5 9M1.5 9L10.5 1M1.5 9H20" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
 						</svg>
 					</a>
-				<% else %>
-					<% if controller_name != 'search' && controller_name == 'feeds' %>
-						<a href="<%= search_index_path %>" aria-label="Buscar">
-							<svg class="w-6 h-auto fill-current" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
-								<path fill="none" d="M0 0h24v24H0V0z"/>
-								<path d="M15.5 14h-.79l-.28-.27c1.2-1.4 1.82-3.31 1.48-5.34-.47-2.78-2.79-5-5.59-5.34-4.23-.52-7.79 3.04-7.27 7.27.34 2.8 2.56 5.12 5.34 5.59 2.03.34 3.94-.28 5.34-1.48l.27.28v.79l4.25 4.25c.41.41 1.08.41 1.49 0 .41-.41.41-1.08 0-1.49L15.5 14zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z"/>
-							</svg>
-						</a>
-					<% end %>
 				<% end %>
 			</div>
 		<% end %>
@@ -51,7 +42,7 @@
 					<%= content_for(:top_app_bar_title) %>
 				</turbo-frame>
 			<% elsif props[:visible][:logo] %>
-				<a class="inline-block relative mx-auto transition-transform md:transform md:hover:scale-105 md:ml-0"
+				<a class="inline-block relative transition-transform md:transform md:hover:scale-105 md:ml-0"
 					 aria-label="Página inicial"
 					 href="<%= root_path %>">
 					<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 822.44 181" class="h-8">
@@ -112,7 +103,13 @@
 	<div class="md:col-span-3 flex-shrink-0">
 		<div class="flex h-full items-center justify-end">
 			<% if current_user && controller_name == 'feeds' && action_name == 'index' %>
-				<%= link_to profile_path(current_user), class: 'c-chip border-0 md:border p-0 md:p-2' do %>
+				<%= link_to search_index_path, class: 'md:hidden mr-3', 'aria-label': 'Buscar' do %>
+					<svg class="w-6 h-auto fill-current" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+						<path fill="none" d="M0 0h24v24H0V0z"/>
+						<path d="M15.5 14h-.79l-.28-.27c1.2-1.4 1.82-3.31 1.48-5.34-.47-2.78-2.79-5-5.59-5.34-4.23-.52-7.79 3.04-7.27 7.27.34 2.8 2.56 5.12 5.34 5.59 2.03.34 3.94-.28 5.34-1.48l.27.28v.79l4.25 4.25c.41.41 1.08.41 1.49 0 .41-.41.41-1.08 0-1.49L15.5 14zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z"/>
+					</svg>
+				<% end %>
+				<%= link_to profile_path(current_user), class: 'c-chip border-0 md:border p-0 md:p-2 bg-gray-200 md:bg-none' do %>
 					<% if current_user&.picture %>
 						<%= image_tag(current_user.picture, { class: "w-7 h-7 border rounded-full", alt: current_user&.name, onerror: "this.style.opacity='0'" }) rescue nil %>
 					<% else %>
