--- a/web/app/views/movies/_movie.html.erb
+++ b/web/app/views/movies/_movie.html.erb
@@ -56,10 +56,10 @@
 			<%= movie.description %>
 		</div>
 		<div class="grid grid-cols-12 grid-flow-col gap-0 px-5 md:px-0 mt-10 max-w-screen-lg md:mt-20 md:gap-10">
-			<div class="col-span-12 mx-auto w-full rounded-lg border md:border-0 md:col-span-9 md:space-y-12">
+			<div class="overflow-hidden col-span-12 mx-auto w-full rounded-lg border md:border-0 md:col-span-9 md:space-y-12">
 				<% movie.screenings&.active&.sort_by { |s| s.cinema&.display_name }&.group_by { |s| [s.cinema&.display_name, s.cinema&.google_id] }.each_with_index do |cinema_name_group, index| %>
 					<% if cinema_name_group[1].any? { |s| s.day.to_date >= Date.current } %>
-						<div data-controller="accordion" data-accordion-mobile-only-value="true" data-accordion-body-class="bg-gray-50" data-accordion-title-class="font-semibold" class="p-4 border-b md:border-0 md:p-0 last:border-b-0">
+						<div data-controller="accordion" data-accordion-mobile-only-value="true" data-accordion-body-class="bg-white" data-accordion-title-class="font-semibold" class="p-4 border-b md:border-0 md:p-0 last:border-b-0">
 							<div data-action="click->accordion#toggle" data-accordion-open-value="false" class="grid grid-cols-4 gap-3">
 								<div class="col-span-3 text-sm md:inline-block md:mb-3 md:pr-5">
 									<div class="inline select-none  md:mb-3">
@@ -113,35 +113,37 @@
 									</svg>
 								</div>
 							</div>
-							<div data-accordion-target="hidden" class="grid hidden grid-cols-1 grid-flow-row gap-2 md:grid md:grid-cols-3">
-								<% cinema_name_group[1].filter { |screening| screening.day.to_date >= Date.current }.sort_by { |screening| screening.day.to_date }.group_by { |screening| screening.day }.each do |screening_day_group| %>
-									<div class="p-3 bg-white rounded border">
-										<h3 class="inline c-h4">
-											<%= day_of_week(screening_day_group[0]).titleize %>
-										</h3>
-										<span class="text-xs text-gray-800"><%= screening_day_group[0].strftime('%d/%m/%y') %></span>
-										<div class="float-right -mt-1 -mr-2 w-content">
-											<%= render(LikesButtonComponent.new(likeable: screening_day_group[1][0], user: current_user)) if screening_day_group[1][0] %>
-										</div>
-										<div class="mt-3 space-y-1">
-											<% screening_day_group[1].filter { |s| s.times&.any? }.each do |screening| %>
-												<div class="">
-													<div class="text-xs">
-														<%= screening.language %>
-														<span class="text-gray-500 text-xxs"><%= screening.screen_type %></span>
+							<div class="scrollx -mx-5 md:mx-0">
+								<div data-accordion-target="hidden" class="hidden px-5 md:px-0 gap-2 grid grid-flow-col md:grid-flow-row md:w-auto md:grid md:grid-cols-3 w-content">
+									<% cinema_name_group[1].filter { |screening| screening.day.to_date >= Date.current }.sort_by { |screening| screening.day.to_date }.group_by { |screening| screening.day }.each do |screening_day_group| %>
+										<div class="p-3 bg-white rounded border">
+											<h3 class="inline c-h4">
+												<%= day_of_week(screening_day_group[0]).titleize %>
+											</h3>
+											<span class="text-xs text-gray-800"><%= screening_day_group[0].strftime('%d/%m/%y') %></span>
+											<div class="float-right -mt-1 -mr-2 w-content">
+												<%= render(LikesButtonComponent.new(likeable: screening_day_group[1][0], user: current_user)) if screening_day_group[1][0] %>
+											</div>
+											<div class="mt-3 space-y-1">
+												<% screening_day_group[1].filter { |s| s.times&.any? }.each do |screening| %>
+													<div class="">
+														<div class="text-xs">
+															<%= screening.language %>
+															<span class="text-gray-500 text-xxs"><%= screening.screen_type %></span>
+														</div>
+														<div class="flex flex-wrap mt-1">
+															<% screening.times&.each do |time| %>
+																<div class="py-1 px-2 mr-1 mb-1 text-xs text-gray-800 bg-gray-100 rounded-full w-content">
+																	<%= time %>
+																</div>
+															<% end %>
+														</div>
 													</div>
-													<div class="flex flex-wrap mt-1">
-														<% screening.times&.each do |time| %>
-															<div class="py-1 px-2 mr-1 mb-1 text-xs text-gray-800 bg-gray-100 rounded-full w-content">
-																<%= time %>
-															</div>
-														<% end %>
-													</div>
-												</div>
-											<% end %>
+												<% end %>
+											</div>
 										</div>
-									</div>
-								<% end %>
+									<% end %>
+								</div>
 							</div>
 						</div>
 					<% end %>
