--- a/web/app/views/layouts/_top-app-bar.html.erb
+++ b/web/app/views/layouts/_top-app-bar.html.erb
@@ -109,7 +109,7 @@
 						<path d="M15.5 14h-.79l-.28-.27c1.2-1.4 1.82-3.31 1.48-5.34-.47-2.78-2.79-5-5.59-5.34-4.23-.52-7.79 3.04-7.27 7.27.34 2.8 2.56 5.12 5.34 5.59 2.03.34 3.94-.28 5.34-1.48l.27.28v.79l4.25 4.25c.41.41 1.08.41 1.49 0 .41-.41.41-1.08 0-1.49L15.5 14zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z"/>
 					</svg>
 				<% end %>
-				<%= link_to profile_path(current_user), class: 'c-chip border-0 md:border p-0 md:p-2 bg-gray-200 md:bg-none' do %>
+				<%= link_to profile_path(current_user), class: 'c-chip border-0 md:border p-0 md:p-2 bg-gray-200 md:bg-white' do %>
 					<% if current_user&.picture %>
 						<%= image_tag(current_user.picture, { class: "w-7 h-7 border rounded-full", alt: current_user&.name, onerror: "this.style.opacity='0'" }) rescue nil %>
 					<% else %>
