--- a/web/app/components/hero/horizontal_event_component.html.erb
+++ b/web/app/components/hero/horizontal_event_component.html.erb
@@ -3,53 +3,29 @@
 
 	</div>
 	<div data-hero--horizontal-event-target="currentItem"
-			 class="flex justify-between transition-opacity select-none ">
-		<div class="<%= helpers.class_names('pr-6 flex-1', {}) %>">
-			<%= content_tag :a,
-											dom_id(@event, 'hero--horizontal-event__link'),
-											href:  event_path(@event),
-											data:  {
-												action:     'click->hero--horizontal-event#openEvent',
-												'event-id': @event.id
-											},
-											class: 'c-h3 inline leading-snug' do %>
-				<%= helpers.limit_name_size @event.name, 40 %>
-			<% end %>
-			<div class="inline text-sm text-gray-700">
-				<%= helpers.day_of_week(@event.start_time)&.capitalize %>
-				· <%= @event.multiple_hours? ? '+1 horário' : "#{helpers.format_hour(@event.start_time)}h" %> ·
-				<span class="text-brand-600"><%= @event&.categories_display_name&.capitalize %> ·</span>
-				<%= link_to helpers.limit_place_name_size(@event.place_name, 24), place_path(@event.place), class: 'md:hover:underline capitalize' %>
-			</div>
-			<div class="font-light hidden md:inline-block mt-2 text-gray-700 text-sm">
-				<%= helpers.limit_description_size @event.description, 120 %>
-			</div>
-			<div class="flex mt-5 space-x-4">
-				<%= content_tag :div, data: { action: 'click->hero--horizontal-event#like', 'event-id': @event.id }, class: 'c-chip' do %>
-					<svg class="<%= helpers.class_names 'h-5 w-5 stroke-current',
-																							{ '': !@user&.like?(@event),
-																								'': @user&.like?(@event) } %>" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-						<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M14 10h4.764a2 2 0 011.789 2.894l-3.5 7A2 2 0 0115.263 21h-4.017c-.163 0-.326-.02-.485-.06L7 20m7-10V5a2 2 0 00-2-2h-.095c-.5 0-.905.405-.905.905 0 .714-.211 1.412-.608 2.006L7 11v9m7-10h-2M7 20H5a2 2 0 01-2-2v-6a2 2 0 012-2h2.5"/>
-					</svg>
-					<span class="<%= helpers.class_names('ml-1', { '': !@user&.like?(@event),
-																												 '': @user&.like?(@event) }) %>">
-						Curti
-					</span>
+			 class="transition-opacity select-none ">
+		<div class="flex justify-between">
+			<div class="<%= helpers.class_names('pr-3 flex-1', {}) %>">
+				<%= content_tag :a,
+												dom_id(@event, 'hero--horizontal-event__link'),
+												href:  event_path(@event),
+												data:  {
+													action:     'click->hero--horizontal-event#openEvent',
+													'event-id': @event.id
+												},
+												class: 'c-h3 inline leading-snug' do %>
+					<%= helpers.limit_name_size @event.name, 40 %>
 				<% end %>
-				<%= content_tag :div, data: { action: 'click->hero--horizontal-event#dislike', 'event-id': @event.id }, class: 'c-chip' do %>
-					<svg class="<%= helpers.class_names 'h-5 w-5 stroke-current',
-																							{ '': !@user&.dislike?(@event),
-																								'': @user&.dislike?(@event) } %>" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-						<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M10 14H5.236a2 2 0 01-1.789-2.894l3.5-7A2 2 0 018.736 3h4.018a2 2 0 01.485.06l3.76.94m-7 10v5a2 2 0 002 2h.096c.5 0 .905-.405.905-.904 0-.715.211-1.413.608-2.008L17 13V4m-7 10h2m5-10h2a2 2 0 012 2v6a2 2 0 01-2 2h-2.5"/>
-					</svg>
-					<span class="<%= helpers.class_names('ml-1', { '': !@user&.like?(@event),
-																												 '': @user&.like?(@event) }) %>">
-						Não Curti
-					</span>
-				<% end %>
+				<div class="inline text-sm text-gray-700">
+					<%= helpers.day_of_week(@event.start_time)&.capitalize %>
+					· <%= @event.multiple_hours? ? '+1 horário' : "#{helpers.format_hour(@event.start_time)}h" %> ·
+					<span class="text-brand-600"><%= @event&.categories_display_name&.capitalize %> ·</span>
+					<%= link_to helpers.limit_place_name_size(@event.place_name, 24), place_path(@event.place), class: 'md:hover:underline capitalize' %>
+				</div>
+				<div class="font-light hidden md:inline-block mt-2 text-gray-700 text-sm">
+					<%= helpers.limit_description_size @event.description, 120 %>
+				</div>
 			</div>
-		</div>
-		<div>
 			<div style="background-color: <%= @event.image_dominant_color %>"
 					 class="<%= helpers.class_names('h-20 md:h-28 md:w-48 overflow-hidden rounded-lg border relative w-32',
 																					{}) %>">
@@ -67,6 +43,30 @@
 					} rescue nil %>
 				<% end %>
 			</div>
+		</div>
+		<div class="flex mt-3 space-x-4 flex-wrap">
+			<%= content_tag :div, data: { action: 'click->hero--horizontal-event#like', 'event-id': @event.id }, class: 'c-chip' do %>
+				<svg class="<%= helpers.class_names 'h-5 w-5 stroke-current',
+																						{ '': !@user&.like?(@event),
+																							'': @user&.like?(@event) } %>" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+					<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M14 10h4.764a2 2 0 011.789 2.894l-3.5 7A2 2 0 0115.263 21h-4.017c-.163 0-.326-.02-.485-.06L7 20m7-10V5a2 2 0 00-2-2h-.095c-.5 0-.905.405-.905.905 0 .714-.211 1.412-.608 2.006L7 11v9m7-10h-2M7 20H5a2 2 0 01-2-2v-6a2 2 0 012-2h2.5"/>
+				</svg>
+				<span class="<%= helpers.class_names('ml-1', { '': !@user&.like?(@event),
+																											 '': @user&.like?(@event) }) %>">
+						Curti
+					</span>
+			<% end %>
+			<%= content_tag :div, data: { action: 'click->hero--horizontal-event#dislike', 'event-id': @event.id }, class: 'c-chip' do %>
+				<svg class="<%= helpers.class_names 'h-5 w-5 stroke-current',
+																						{ '': !@user&.dislike?(@event),
+																							'': @user&.dislike?(@event) } %>" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+					<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M10 14H5.236a2 2 0 01-1.789-2.894l3.5-7A2 2 0 018.736 3h4.018a2 2 0 01.485.06l3.76.94m-7 10v5a2 2 0 002 2h.096c.5 0 .905-.405.905-.904 0-.715.211-1.413.608-2.008L17 13V4m-7 10h2m5-10h2a2 2 0 012 2v6a2 2 0 01-2 2h-2.5"/>
+				</svg>
+				<span class="<%= helpers.class_names('ml-1', { '': !@user&.like?(@event),
+																											 '': @user&.like?(@event) }) %>">
+						Não Curti
+					</span>
+			<% end %>
 		</div>
 	</div>
 <% end %>
