--- a/web/app/views/movies/hovercard.html.erb
+++ b/web/app/views/movies/hovercard.html.erb
@@ -1,4 +1,4 @@
-<div data-hovercard-target="inner" class="transition-all transform fixed bottom-0 left-0 z-50 p-4 md:p-6 mx-0 space-y-3 bg-white rounded-t-xl md:rounded-lg border md:-mx-2 md:absolute md:bottom-3 min-w-max-content shadow-t-2xl md:shadow-xl">
+<div data-hovercard-target="inner" class="transition-all transform fixed bottom-0 left-0 z-50 p-4 md:p-5 mx-0 space-y-3 md:space-y-0 bg-white rounded-t-xl md:rounded-lg border md:-mx-2 md:absolute md:bottom-3 min-w-max-content shadow-t-2xl md:shadow-xl">
 	<div data-action="click->hovercard#hide" class="absolute top-3 right-3 md:hidden rounded-full">
 		<svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" viewBox="0 0 20 20" fill="currentColor">
 			<path fill-rule="evenodd" d="M10 18a8 8 0 100-16 8 8 0 000 16zM8.707 7.293a1 1 0 00-1.414 1.414L8.586 10l-1.293 1.293a1 1 0 101.414 1.414L10 11.414l1.293 1.293a1 1 0 001.414-1.414L11.414 10l1.293-1.293a1 1 0 00-1.414-1.414L10 8.586 8.707 7.293z" clip-rule="evenodd"/>
@@ -6,7 +6,7 @@
 	</div>
 	<div class="flex flex-col md:flex-row">
 		<% if @movie.trailer %>
-			<div class="bg-gray-200 rounded overflow-hidden h-48 md:w-64 md:h-36 w-full my-3 md:my-0">
+			<div class="bg-gray-200 rounded overflow-hidden h-48 md:w-72 md:h-40 w-full my-3 md:my-0">
 				<iframe frameborder="0" scrolling="no" marginheight="0" marginwidth="0" width="100%" height="100%" type="text/html" allow="autoplay" src="<%= @movie&.trailer&.gsub('watch?v=', 'embed/') %>?autoplay=1&fs=0&showinfo=0&rel=0&cc_load_policy=0&start=20&end=0">
 				</iframe>
 			</div>
@@ -39,7 +39,7 @@
 		</a>
 	</div>
 
-	<div class="text-xs md:text-sm">
+	<div class="md:pt-5 text-xs md:text-sm">
 		<%= truncate(@movie.description, length: 300, separator: ' ') { link_to 'continua', movie_path(@movie), class: 'text-brand-600 text-medium' } rescue nil %>
 	</div>
 </div>
