Fix chips in movies partial

--- a/web/app/views/feeds/index.html.erb
+++ b/web/app/views/feeds/index.html.erb
@@ -47,7 +47,7 @@
 																									 selected_movie: @movie,
 																									 user:           current_user,
 																									 title:          'Filmes em Porto Alegre',
-																									 chips:          false,
+																									 chips:          true,
 																									 hovercard:      true,
 																									 template:       'default',
 																									 target:         '_top',
